--- a/public/about/index.html
+++ b/public/about/index.html
@@ -10,7 +10,7 @@
 /><title>
   About Me | deroise2306
 </title>
-<meta name="description" content="iloveu"/><script>
+<meta name="description" content="Lovely nigga"/><script>
   window.siteConfig = JSON.parse("{\"anchor_icon\":false,\"base\":\"http://localhost:1313/\",\"clipboard\":{\"copyright\":{\"count\":50,\"enable\":false,\"license_type\":\"by-nc-sa\"},\"fail\":{\"en\":\"Copy failed (ﾟ⊿ﾟ)ﾂ\",\"ja\":\"コピー失敗 (ﾟ⊿ﾟ)ﾂ\",\"pt-br\":\"Falha ao copiar (ﾟ⊿ﾟ)ﾂ\",\"zh-cn\":\"复制失败 (ﾟ⊿ﾟ)ﾂ\",\"zh-tw\":\"複製失敗 (ﾟ⊿ﾟ)ﾂ\"},\"success\":{\"en\":\"Copy successfully (*^▽^*)\",\"ja\":\"コピー成功 (*^▽^*)\",\"pt-br\":\"Copiado com sucesso (*^▽^*)\",\"zh-cn\":\"复制成功 (*^▽^*)\",\"zh-tw\":\"複製成功 (*^▽^*)\"}},\"code_block\":{\"expand\":true},\"icon_font\":\"4552607_4k4bc36ef96\",\"outdate\":{\"daysago\":180,\"enable\":false,\"message\":{\"en\":\"This article was last updated on {time}. Please note that the content may no longer be applicable.\",\"ja\":\"この記事は最終更新日：{time}。記載内容が現在有効でない可能性がありますのでご注意ください。\",\"pt-br\":\"Este artigo foi atualizado pela última vez em {time}. Observe que o conteúdo pode não ser mais aplicável.\",\"zh-cn\":\"本文最后更新于 {time}，请注意文中内容可能已不适用。\",\"zh-tw\":\"本文最後更新於 {time}，請注意文中內容可能已不適用。\"}}}");
   
 </script>
@@ -36,7 +36,7 @@
   <meta property="og:title" content="About Me | deroise2306" />
   <meta
     property="og:description"
-    content="iloveu"
+    content="Lovely nigga"
   />
   <meta property="og:url" content="http://localhost:1313/about/" />
   <meta
@@ -144,7 +144,7 @@ This article does not have a corresponding language version
     class="lazyload"
   />
   <div class="sidebar-author-name">deroise2306</div>
-  <div class="sidebar-description">iloveu</div>
+  <div class="sidebar-description">Lovely nigga</div>
 </div>
 <div class="sidebar-state">
   <div class="sidebar-state-article">
@@ -220,7 +220,7 @@ deroise2306&rsquo;s here!
 <a class="header-anchor" href="#about-me"></a>
 About me
 </h3><ul>
-<li><strong>Play CTF 4fun <a href="https://v1t.site/">@V1t</a></strong></li>
+<li><strong>Play CTF 4fun at <a href="https://v1t.site/">@V1t</a></strong></li>
 </ul>
 <p>Find me there:</p>
 <ul>
@@ -285,7 +285,7 @@ About me
     class="lazyload"
   />
   <div class="sidebar-author-name">deroise2306</div>
-  <div class="sidebar-description">iloveu</div>
+  <div class="sidebar-description">Lovely nigga</div>
 </div>
 <div class="sidebar-state">
   <div class="sidebar-state-article">
@@ -372,7 +372,7 @@ About me
           author: "deroise2306",
           title: "About Me",
           url: "http:\/\/localhost:1313\/about\/",
-          description: "\rderoise2306\u0026rsquo;s here!\rI\u0026rsquo;m currently a CyberSec Student based in KMA (Academy of Cryptography Techniques)\nAbout me\rPlay CTF 4fun @V1t Find me there:\nGitHub CTFtime ",
+          description: "\rderoise2306\u0026rsquo;s here!\rI\u0026rsquo;m currently a CyberSec Student based in KMA (Academy of Cryptography Techniques)\nAbout me\rPlay CTF 4fun at @V1t Find me there:\nGitHub CTFtime ",
           cover: "http:\/\/localhost:1313\/images\/banner.webp",
         };
       </script><script src="/js/insert_highlight.js" data-pjax ></script><script src="/js/tabs.js" data-pjax defer></script><script type="module" data-pjax>const PhotoSwipeLightbox = (await safeImport("https:\/\/npm.webcache.cn\/photoswipe@5.4.4\/dist\/photoswipe-lightbox.esm.min.js", "sha384-DiL6M\/gG\u002bwmTxmCRZyD1zee6lIhawn5TGvED0FOh7fXcN9B0aZ9dexSF\/N6lrZi\/")).default;const initPswp = (gallery, children) => {
