--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 /><title>
   deroise2306&#39;s Home
 </title>
-<meta name="description" content="iloveu"/><script>
+<meta name="description" content="Lovely nigga"/><script>
   window.siteConfig = JSON.parse("{\"anchor_icon\":false,\"base\":\"http://localhost:1313/\",\"clipboard\":{\"copyright\":{\"count\":50,\"enable\":false,\"license_type\":\"by-nc-sa\"},\"fail\":{\"en\":\"Copy failed (ﾟ⊿ﾟ)ﾂ\",\"ja\":\"コピー失敗 (ﾟ⊿ﾟ)ﾂ\",\"pt-br\":\"Falha ao copiar (ﾟ⊿ﾟ)ﾂ\",\"zh-cn\":\"复制失败 (ﾟ⊿ﾟ)ﾂ\",\"zh-tw\":\"複製失敗 (ﾟ⊿ﾟ)ﾂ\"},\"success\":{\"en\":\"Copy successfully (*^▽^*)\",\"ja\":\"コピー成功 (*^▽^*)\",\"pt-br\":\"Copiado com sucesso (*^▽^*)\",\"zh-cn\":\"复制成功 (*^▽^*)\",\"zh-tw\":\"複製成功 (*^▽^*)\"}},\"code_block\":{\"expand\":true},\"icon_font\":\"4552607_4k4bc36ef96\",\"outdate\":{\"daysago\":180,\"enable\":false,\"message\":{\"en\":\"This article was last updated on {time}. Please note that the content may no longer be applicable.\",\"ja\":\"この記事は最終更新日：{time}。記載内容が現在有効でない可能性がありますのでご注意ください。\",\"pt-br\":\"Este artigo foi atualizado pela última vez em {time}. Observe que o conteúdo pode não ser mais aplicável.\",\"zh-cn\":\"本文最后更新于 {time}，请注意文中内容可能已不适用。\",\"zh-tw\":\"本文最後更新於 {time}，請注意文中內容可能已不適用。\"}}}");
   
 </script>
@@ -37,7 +37,7 @@
   <meta property="og:title" content="deroise2306&#39;s Home" />
   <meta
     property="og:description"
-    content="iloveu"
+    content="Lovely nigga"
   />
   <meta property="og:url" content="http://localhost:1313/" />
   <meta
@@ -128,7 +128,7 @@ This article does not have a corresponding language version
 <header id="header" aria-label="Site header"><picture></picture><img  fetchpriority="high" src="/images/banner.webp" alt="deroise2306&#39;s Home"><div id="header-outer">
     <div id="header-title"><span id="logo">
             <h1 data-aos="slide-up">deroise2306&#39;s Home</h1>
-          </span><h2 id="subtitle-wrap" data-aos="slide-down"><span id="subtitle">iloveu</span></h2></div>
+          </span><h2 id="subtitle-wrap" data-aos="slide-down"><span id="subtitle"> </span></h2></div>
   </div>
 </header><div id="content"
           aria-label="Page content"
@@ -145,7 +145,7 @@ This article does not have a corresponding language version
     class="lazyload"
   />
   <div class="sidebar-author-name">deroise2306</div>
-  <div class="sidebar-description">iloveu</div>
+  <div class="sidebar-description">Lovely nigga</div>
 </div>
 <div class="sidebar-state">
   <div class="sidebar-state-article">
@@ -247,7 +247,7 @@ This article does not have a corresponding language version
     class="lazyload"
   />
   <div class="sidebar-author-name">deroise2306</div>
-  <div class="sidebar-description">iloveu</div>
+  <div class="sidebar-description">Lovely nigga</div>
 </div>
 <div class="sidebar-state">
   <div class="sidebar-state-article">
